--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>naviya</title>
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYs4Eybp4wveIqW6jH0kVhzyDp8VibPNU&libraries=places"></script>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
