--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,8 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>naviya</title>
-  <script src="https://maps.googleapis.com/maps/api/js?key="></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key="
+  ></script>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
